Bug 1297315 - Fix Wmaybe-uninitialized warning and get rid of goto statement in GLContextProviderGLX.cpp and GfxTexturesReporter.cpp. r=jgilbert

MozReview-Commit-ID: AUjK7HhatX6

--HG--
extra : rebase_source : 3df07981fdd0f7cff9576cff8fecf955522294bf